--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
-osx_image: xcode9.1
 language: objective-c
 xcode_sdk: iphonesimulator11.1
+xcode_workspace: Audiobook.xcworkspace
+xcode_scheme: Audiobook
 git:
   depth: 1
 cache:
 - bundler
 - cocoapods
 before_install:
-- brew update
+- export IOS_SIMULATOR_UDID=`instruments -s devices | grep "iPhone 8 (11.4" | awk -F '[ ]' '{print $4}' | awk -F '[\[]' '{print $2}' | sed 's/.$//'`
+- echo $IOS_SIMULATOR_UDID
 install:
 - gem install bundler
 - bundle install
@@ -16,6 +18,6 @@ install:
 before_script:
 - export LANG=en_US.UTF-8
 script:
-- set -o pipefail && travis_retry xcodebuild -workspace Audiobook.xcworkspace -scheme Audiobook -configuration Debug -destination "id=8303F643-76A3-4369-B02E-CA814E28B305" clean test | xcpretty -f `xcpretty-travis-formatter`
+- xcodebuild -workspace Audiobook.xcworkspace -scheme Audiobook -sdk iphonesimulator11.1 -configuration Debug -destination "id=$IOS_SIMULATOR_UDID" build test | xcpretty -f `xcpretty-travis-formatter`
 notifications:
   email: false
